# Archify-rust

./: Cargo.toml  Makefile  README.md  SECURITY.md  build.sh  com.archify.helper  entitlements.plist  process_log.txt  smjobbless_installer  smjobbless_installer.m  test_emojis  test_emojis.rs  test_fonts.rs
.github/: README.md
.github/workflows/: build.yml  release.yml
assets/: icon.icns
helper/: com.archify.helper.plist
scripts/: create_icns.sh
src/: app.rs  app.rs.backup  binary_processor.rs  file_operations.rs  gui.rs  helper.rs  icon_loader.rs  lib.rs  main.rs  privileged_helper.rs  types.rs
