[package]
name = "archify-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of Archify for removing ARM64e/ARM64 code from binaries"
license = "GPL-3.0"

[dependencies]
# GUI framework
eframe = "0.26.0"
egui = "0.26.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# File system operations
walkdir = "2.4"
tempfile = "3.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Path handling
path-slash = "0.2"

# System information
sysinfo = "0.30"

# Cross-platform file operations
dirs = "5.0"

# Progress tracking
indicatif = "0.17"

# Human readable sizes
bytesize = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"

# Native file dialog
rfd = "0.14"

# Fast Mach-O parsing
goblin = "0.8"

# CPU core detection
num_cpus = "1.16"

# App bundling
#cargo-bundle = "0.3"

# Added for helper binary
libc = "0.2"

# Added for shell-words crate
shell-words = "1.1"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific dependencies
cocoa = "0.25"
core-foundation = "0.9"
core-graphics = "0.23" 

[package.metadata.bundle]
name = "Archify"
identifier = "com.archify.app"
icon = ["assets/icon.icns"]
resources = [
  "helper/com.archify.helper.launchd.plist"
]
category = "public.app-category.utilities"
copyright = "GPL-3.0" 